syntax = "proto3";

import "filters.proto";
import "types.proto";

package co.topl.genus.services;

service BlockSubscription {
  rpc Create (CreateBlockSubscriptionReq) returns (CreateBlockSubscriptionRes);
  rpc Delete (DeleteBlockSubscriptionReq) returns (DeleteBlockSubscriptionRes);
  rpc Read (stream ReadBlockSubscriptionReq) returns (stream ReadBlockSubscriptionRes);
}

message CreateBlockSubscriptionReq {
  BlockFilter filter = 1;
  uint64 start_from = 3;
  uint32 confirmation_depth = 2;
}

message CreateBlockSubscriptionRes {
  string subscription_id = 1;
}

message DeleteBlockSubscriptionReq {
  string id = 1;
}

message DeleteBlockSubscriptionRes {}

message ReadBlockSubscriptionReq {
  oneof request_type {
    Start start = 1;
    Checkpoint checkpoint = 2;
    Pause pause = 3;
  }

  message Start {
    string subscription_id = 1;
  }

  message Checkpoint {
    uint64 timestamp = 1;
  }

  message Pause {}
}

message ReadBlockSubscriptionRes {
  Block block = 1;
}
